--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>springboot-demo</name>
+	<name>spring-demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
